--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 2022-941/main.out
 2022-941/main.snm
 2022-941/main.synctex.gz
-2022-941/main.pdf
+*.pdf
 2022-941/main.toc
 2022-941/section_vector_commitment.log
